--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,17 @@
   <groupId>com.falabella</groupId>
   <artifactId>Prueba_falabella</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+  	<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+	<dependency>
+    	<groupId>io.rest-assured</groupId>
+    	<artifactId>rest-assured</artifactId>
+    	<version>5.1.1</version>
+    	<scope>test</scope>
+	</dependency>
+  </dependencies>
+  
+  
+  
 </project>
