--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,15 @@
     	<version>5.1.1</version>
     	<scope>test</scope>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+	<dependency>
+	    <groupId>org.testng</groupId>
+	    <artifactId>testng</artifactId>
+	    <version>7.6.1</version>
+	    <scope>test</scope>
+	</dependency>
+	
   </dependencies>
   
   
