--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,11 @@
   <artifactId>Prueba_falabella</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  
   <dependencies>
   	<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
 	<dependency>
@@ -18,11 +23,24 @@
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
 	    <version>7.6.1</version>
-	    <scope>test</scope>
 	</dependency>
 	
   </dependencies>
   
+  <build>
+	<plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M7</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+	</plugins>
+  </build>
   
   
 </project>
